--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -44,14 +44,11 @@
 nav ul {
   list-style: none;
   padding: 0;
-  margin: 1rem 0 0 1rem;
+  margin: 1rem 1rem 0 1rem;
 }
-.nav-hidden {
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  overflow-x: hidden;
-  transition: 0.5s;
+
+nav ul:first-of-type {
+  margin: 1rem 0 1rem 1rem;
 }
 
 nav a {
@@ -78,7 +75,7 @@ nav a {
 .navmenu-toggle:hover {
   box-shadow: 0px 0px 4px 0px #000000;
 }
-.navmenu-toggle:focus {
+.navmenu-toggle:active {
   outline: none;
   box-shadow: 0px 0px 2px 0px #000000;
 }
@@ -102,10 +99,16 @@ nav a {
 nav ul:nth-child(2) {
   margin-left: 0;
 }
+
+.sidenav-hidden {
+  display: none;
+}
+
 .sitepages-links a:hover,
 .sitepages-links a:active {
   text-decoration: underline;
 }
+
 .authpages-links > li {
   margin: 0.75rem 1rem;
 }
@@ -186,12 +189,12 @@ footer > * {
   padding: 1rem;
   margin: 0;
 }
-footer h3 {
+footer h4 {
   padding: 0;
 }
 footer small {
   background-color: var(--primary);
   color: var(--text-white);
   align-self: stretch;
-  flex-grow: 1;
+  text-align: center;
 }
