--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,200 +1,108 @@
-:root {
-  --primary: #007115;
-  --primary-light: #46a143;
-  --primary-dark: #004d00;
-  --text-primary: #007014;
-  --text-white: #fff;
-  --accent: #ff6230;
-  --accent-light: #ff945d;
-  --accent-dark: #c52e00;
-  --bg-white: #fff;
+.font-size-1 {
+  font-size: 1.2rem;
 }
-* {
-  box-sizing: border-box;
+.font-size-2 {
+  font-size: 2rem;
 }
-
 .flex-row {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row;
 }
-
-.flex-col {
-  display: flex;
-  flex-flow: column nowrap;
-}
-
-.flex-center {
-  justify-content: center;
-}
-.flex-space-between {
-  justify-content: space-between;
-}
-.flex-space-even {
-  justify-content: space-evenly;
-}
-.flex-space-around {
-  justify-content: space-around;
-}
-
-.self-align-center {
-  align-self: center;
+.align-center {
   align-items: center;
 }
 
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 1rem 1rem 0 1rem;
+nav {
+  height: auto;
 }
-
-nav ul:first-of-type {
-  margin: 1rem 0 1rem 1rem;
-}
-
-nav a {
-  text-decoration: none;
-  display: block;
-  padding: 0.75rem 0;
-  min-width: 100%;
-  text-align: center;
-  font-weight: bold;
-  font-size: 1rem;
-  color: var(--text-primary);
-}
-
 .navmenu-toggle {
   background-image: url('../../images/bars.svg');
   background-color: var(--bg-white);
   cursor: pointer;
   border: 4px solid #fff;
   border-radius: 4px;
-  box-shadow: 0px 0px 3px 0px #000000;
+  box-shadow: 0px 0px 2px 0px #000000;
   padding: 1rem;
   transition: box-shadow 0.3s;
+  align-self: center;
+  margin-right: 1rem;
 }
 .navmenu-toggle:hover {
   box-shadow: 0px 0px 4px 0px #000000;
 }
-.navmenu-toggle:active {
+.navmenu-toggle:focus {
   outline: none;
+  background-color: transparent;
   box-shadow: 0px 0px 2px 0px #000000;
 }
-
-.navmenu-brandname_container {
-  font-size: 1.5rem;
-  justify-content: center;
-  font-weight: bolder;
-  flex-basis: 0;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+.navmenu-toggle:active {
+  outline: none;
+  background-color: transparent;
+  box-shadow: 0px 0px 4px 0px #000000;
 }
-.navmenu-brandname {
-  color: var(--primary);
-  font-weight: bold;
-  font-size: 1.8rem;
-  text-align: center;
-  padding: 0 1rem;
-}
-nav ul:nth-child(2) {
-  margin-left: 0;
-}
-
-.sidenav-hidden {
-  display: none;
-}
-
-.sitepages-links a:hover,
-.sitepages-links a:active {
-  text-decoration: underline;
-}
-
-.authpages-links > li {
-  margin: 0.75rem 1rem;
-}
-
-.btn-primary {
-  border: 1px solid var(--primary);
-  border-radius: 4px;
-  color: var(--text-white);
-  font-weight: bold;
-  font-size: 1rem;
-  background-color: var(--primary);
-  transition: background-color 0.3s;
-}
-.btn-primary:hover {
-  background-color: var(--primary-dark);
-}
-.btn-primary-outline {
-  border: 1px solid var(--primary);
-  border-radius: 4px;
-  color: var(--text-primary);
-  font-weight: bold;
-  font-size: 1rem;
-  background-color: var(--bg-white);
-  transition: background-color 0.3s;
-}
-.btn-primary-outline:hover {
-  border: 1px solid var(--primary);
-  border-radius: 4px;
-  color: var(--text-white);
-  font-weight: bold;
-  font-size: 1rem;
-  background-color: var(--primary);
-  transition: background-color 0.3s;
-}
-
-.masthead {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
+.mobile-nav {
+  max-height: 100%;
   width: 100%;
-  height: 50vh;
-  overflow: hidden;
-  background-size: cover;
-  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 37%, rgba(0, 0, 0, 0.65) 100%),
-    url('../../images/farmproduce-header-img-640.webp') no-repeat center center scroll;
+  position: fixed;
+  z-index: 1;
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+.mobile-nav.closed {
+  max-height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  overflow-x: hidden;
+  transition: 0.5s;
 }
 
-h1 {
-  font-style: normal;
+.btn-flat.primary {
+  border: 1px solid #4caf50;
+}
+
+.no-float {
+  float: none;
+}
+.text-bold {
   font-weight: bold;
-  color: #eee;
-  font-size: 10vmin;
-  letter-spacing: 0.03em;
-  line-height: 1;
-  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
-  margin-bottom: 40px;
-  padding: 0 1rem;
 }
-img {
-  max-width: 100%;
-  border-radius: 4px;
-  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
-  margin: 1rem;
+.text-bolder {
+  font-weight: bolder;
 }
-main {
-  margin: 2rem 0;
-}
-main > article {
-  padding: 1rem 0;
-}
-main article section > section {
-  margin: 0 1rem;
-}
-
-footer > * {
-  padding: 1rem;
-  margin: 0;
-}
-footer h4 {
-  padding: 0;
-}
-footer small {
-  background-color: var(--primary);
-  color: var(--text-white);
-  align-self: stretch;
+.brand-name {
+  flex-grow: 1;
   text-align: center;
+}
+.ml-1 {
+  margin-left: 1rem;
+}
+.mr-1 {
+  margin-right: 1rem;
+}
+.mr-auto {
+  margin-right: auto;
+}
+.mx-auto {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+}
+.flex-x {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-self: center;
+  flex-grow: 1;
+  margin: 0.5rem 0.5rem;
+  text-align: center;
+}
+@media screen and (min-width: 600px) {
+  .brand-name {
+    flex-grow: 0;
+  }
+  .flex-row-md {
+    display: flex;
+    flex-flow: row nowrap;
+  }
 }
